FreeST/test/Programs/ValidTests/Patterns/multipleCaseCons/multipleCaseCons.fst

data T = A | B

main : Int
main =
  case B of {
    A -> 0,
    A -> 1,
    B -> 2
  }